# OpenClaudgents

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
docs/plans/: 2026-02-15-interactive-slash-commands-design.md  2026-02-15-interactive-slash-commands.md  2026-02-15-status-bar-redesign.md  2026-02-17-terminal-drawer-design.md  2026-02-17-terminal-drawer.md  2026-02-18-v0.3-roadmap.md  2026-02-19-issue-18-copy-search-design.md  2026-02-19-issue-18-copy-search-plan.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: events.rs  lib.rs  main.rs
src-tauri/src/claude/: agent_teams.rs  mod.rs  process.rs  session_store.rs  stream_parser.rs  types.rs
src-tauri/src/commands/: agent_team.rs  git.rs  mod.rs  session.rs  settings.rs
src-tauri/src/db/: mod.rs
src-tauri/src/git/: diff.rs  mod.rs  status.rs  worktree.rs
src/components/agents/: AgentGraph.tsx  AgentNode.tsx  AgentStatusBadge.tsx  McpStatusPanel.tsx  TaskListPanel.tsx  TeamPanel.tsx
src/components/chat/: ChatSearchBar.tsx  Composer.tsx  MessageBubble.tsx  MessageList.tsx  ToolCallBlock.tsx  (+2 more)
src/hooks/: useGitStatus.ts  useKeyboardShortcuts.ts  useStreamingChat.ts  useTauriEvent.ts
src/lib/: commandHandlers.ts  commands.ts  cost.ts  tauri.ts  terminalTheme.ts  theme.ts  types.ts
src/stores/: agentTeamStore.ts  chatStore.ts  sessionStore.ts  settingsStore.ts  toastStore.ts
src/styles/: globals.css  themes.css
(+31 files in other folders)
